// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HighContrastSettings renders with enabled = false 1`] = `
<DocumentFragment>
  <div
    class="genericToggleComponent"
  >
    <div
      class="toggleContainer"
    >
      <div
        class="toggleName"
      >
        Enable high contrast
      </div>
      <div
        class="ms-Toggle is-enabled toggle root-109"
      >
        <div
          class="ms-Toggle-innerContainer container-111"
        >
          <button
            aria-checked="false"
            aria-label="Enable high contrast"
            class="ms-Toggle-background pill-116"
            data-is-focusable="true"
            data-ktp-target="true"
            id="enable-high-contrast-mode"
            role="switch"
            type="button"
          >
            <span
              class="ms-Toggle-thumb thumb-117"
            />
          </button>
          <label
            class="ms-Label ms-Toggle-stateText text-115"
            for="enable-high-contrast-mode"
            id="enable-high-contrast-mode-stateText"
          >
            Off
          </label>
        </div>
      </div>
    </div>
    <div
      class="toggleDescription"
    >
      Make text easier to see by using more distinct colors.
    </div>
  </div>
</DocumentFragment>
`;

exports[`HighContrastSettings renders with enabled = true 1`] = `
<DocumentFragment>
  <div
    class="genericToggleComponent"
  >
    <div
      class="toggleContainer"
    >
      <div
        class="toggleName"
      >
        Enable high contrast
      </div>
      <div
        class="ms-Toggle is-checked is-enabled toggle root-109"
      >
        <div
          class="ms-Toggle-innerContainer container-111"
        >
          <button
            aria-checked="true"
            aria-label="Enable high contrast"
            class="ms-Toggle-background pill-112"
            data-is-focusable="true"
            data-ktp-target="true"
            id="enable-high-contrast-mode"
            role="switch"
            type="button"
          >
            <span
              class="ms-Toggle-thumb thumb-113"
            />
          </button>
          <label
            class="ms-Label ms-Toggle-stateText text-115"
            for="enable-high-contrast-mode"
            id="enable-high-contrast-mode-stateText"
          >
            On
          </label>
        </div>
      </div>
    </div>
    <div
      class="toggleDescription"
    >
      Make text easier to see by using more distinct colors.
    </div>
  </div>
</DocumentFragment>
`;
